# pycparserext

./: .gitignore  .gitlab-ci.yml  LICENSE  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
pycparserext/: c_generator.py  ext_c_generator.py  ext_c_lexer.py  ext_c_parser.py
test/: test_pycparserext.py
